--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 @import url("./header.scss");
 @import url("./hero.scss");
 @import url("./about.scss");
+@import url("./pub.scss");
 
 *{
   margin: 0;
