--- a/src/style.scss
+++ b/src/style.scss
@@ -2,7 +2,8 @@
 @import url("./hero.scss");
 @import url("./about.scss");
 @import url("./pub.scss");
-
+@import url("./choose.scss");
+ 
 *{
   margin: 0;
   padding: 0;
