--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@
 @import url("./about.scss");
 @import url("./pub.scss");
 @import url("./choose.scss");
+@import url("./our.scss");
  
 *{
   margin: 0;
