--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,7 @@
 @import url("./pub.scss");
 @import url("./choose.scss");
 @import url("./our.scss");
+@import url("./banner.scss");
  
 *{
   margin: 0;
