--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,7 @@
 @import url("./choose.scss");
 @import url("./our.scss");
 @import url("./banner.scss");
+@import url("./testimonial.scss");
  
 *{
   margin: 0;
