--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
 @import url("./our.scss");
 @import url("./banner.scss");
 @import url("./testimonial.scss");
+@import url("./gallery.scss");
  
 *{
   margin: 0;
