--- a/src/style.scss
+++ b/src/style.scss
@@ -7,6 +7,7 @@
 @import url("./banner.scss");
 @import url("./testimonial.scss");
 @import url("./gallery.scss");
+@import url("./map.scss");
  
 *{
   margin: 0;
