--- a/src/style.scss
+++ b/src/style.scss
@@ -8,6 +8,7 @@
 @import url("./testimonial.scss");
 @import url("./gallery.scss");
 @import url("./map.scss");
+@import url("./footer.scss");
  
 *{
   margin: 0;
